--- a/teachers.html
+++ b/teachers.html
@@ -40,9 +40,100 @@
                     </div>
                 </div>
             </div>
+                <h3>李小坤</h3>
+                <div class="teacher-info">
+                    <p><strong>职称：</strong>教授/博士生导师</p>
+                    <p><strong>邮箱：</strong><a href="mailto:lixiaokun@mail.hzau.edu.cn">lixiaokun@mail.hzau.edu.cn</a></p>
+                    <p><strong>研究方向：</strong>水稻营养与施肥、稻田地力提升、水旱轮作体系养分管理、稻田综合种养体系养分管理、钾素营养与钾肥、作物专用肥的研发、现代施肥技术</p>
+                    <div class="details">
+                        <h4>学术兼职</h4>
+                        <ul>
+                            <li>中国植物营养与肥料学会化学肥料专业委员会委员</li>
+                            <li>中国植物营养与肥料学会施肥技术专业委员会委员</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
 
-            <!-- 李小坤、任涛、刘诗诗、丛日环、张文君、陆志峰等教授信息模板 -->
-            
+<h3>任涛</h3>
+<div class="teacher-info">
+    <p><strong>职称：</strong>教授/博士生导师</p>
+    <p><strong>邮箱：</strong><a href="mailto:rentao@mail.hzau.edu.cn">rentao@mail.hzau.edu.cn</a></p>
+    <p><strong>研究方向：</strong>作物营养生理与养分管理</p>
+    <div class="details">
+        <h4>学术兼职</h4>
+        <ul>
+            <li>国家油菜产业技术体系"养分管理与施肥"岗位成员</li>
+            <li>《中国油料作物学报》青年编委</li>
+            <li>《Oil Crop Science》青年编委</li>
+            <li>中国植物营养与肥料学会青年工作委员会委员</li>
+            <li>施肥专业技术委员会委员</li>
+            <li>中国自然资源学会农业资源利用专业委员会委员</li>
+        </ul>
+    </div>
+</div>
+
+<h3>刘诗诗</h3>
+<div class="teacher-info">
+    <p><strong>职称：</strong>教授/博士生导师</p>
+    <p><strong>邮箱：</strong><a href="mailto:ssliu@mail.hzau.edu.cn">ssliu@mail.hzau.edu.cn</a></p>
+    <p><strong>研究方向：</strong>农业遥感</p>
+    <div class="details">
+        <h4>荣誉称号</h4>
+        <ul>
+            <li>2021年获植物营养与肥料科学技术一等奖(排名第9)</li>
+            <li>2020年获湖北省科技进步一等奖(排名12)</li>
+        </ul>
+    </div>
+</div>
+
+<h3>丛日环</h3>
+<div class="teacher-info">
+    <p><strong>职称：</strong>副教授/硕士生导师</p>
+    <p><strong>邮箱：</strong><a href="mailto:congrh@mail.hzau.edu.cn">congrh@mail.hzau.edu.cn</a></p>
+    <p><strong>研究方向：</strong>作物养分管理与土壤肥力培育</p>
+    <div class="details">
+        <h4>学术兼职</h4>
+        <ul>
+            <li>国家油菜产业技术体系"养分管理与施肥"岗位成员</li>
+            <li>湖北省秸秆综合利用技术专家组成员</li>
+            <li>中国植物营养与肥料学会化学肥料专业委员会委员</li>
+            <li>中国植物营养与肥料学会养分循环与环境专业技术委员会委员</li>
+            <li>中国自然资源学会农业资源利用专业委员会委员</li>
+        </ul>
+    </div>
+</div>
+
+<h3>张文君</h3>
+<div class="teacher-info">
+    <p><strong>职称：</strong>副教授/硕士生导师</p>
+    <p><strong>邮箱：</strong><a href="mailto:wenjunzhang@mail.hzau.edu.cn">wenjunzhang@mail.hzau.edu.cn</a></p>
+    <p><strong>研究方向：</strong>土壤-植物养分循环与转化；土壤磷化学；植物硅营养</p>
+    <div class="details">
+        <h4>荣誉称号</h4>
+        <ul>
+            <li>2017 第十三届青年教师讲课竞赛中荣获二等奖</li>
+            <li>2016 植物营养类课程"研究性教学"和"多元化考核"改革与实践，获得华中农业大学教学成果一等奖(排名第二)</li>
+            <li>2015 华中农业大学教学质量优秀三等奖</li>
+            <li>2014-2015 学年度校级"优秀班主任"</li>
+            <li>2013 华中农业大学第十一届青年教师讲课竞赛优胜奖</li>
+        </ul>
+    </div>
+</div>
+
+<h3>陆志峰</h3>
+<div class="teacher-info">
+    <p><strong>职称：</strong>副教授/硕士生导师</p>
+    <p><strong>邮箱：</strong><a href="mailto:zhifenglu@mail.hzau.edu.cn">zhifenglu@mail.hzau.edu.cn</a></p>
+    <p><strong>研究方向：</strong>植物营养生理与作物养分管理</p>
+    <div class="details">
+        <h4>获奖情况</h4>
+        <ul>
+            <li>油菜精准轻简高效养分管理关键技术创新及应用. 2020年度湖北省科技进步一等奖(排名第六)</li>
+            <li>钾素营养对冬油菜叶片光合作用的影响机制研究. 2017年中国植物营养与肥料学会首届优秀博士学位论文奖</li>
+        </ul>
+    </div>
+</div>    
         </section>
     </main>
 </body>
