--- a/patents.html
+++ b/patents.html
@@ -23,34 +23,155 @@
             <h2>国家专利成果</h2>
             
             <div class="patent-year">
-                <h3>2023年</h3>
-                <div class="patent-item">
-                    <div class="patent-title">
-                        <a href="#">基于苗期新叶钾含量的油菜隐性缺钾诊断及施肥方法</a>
-                    </div>
-                    <div class="patent-info">
-                        <span>发明人：任涛、谷贺贺、胡文诗等</span>
-                        <span>授权日期：2023年6月</span>
-                        <span>专利号：ZL202310354697.1</span>
-                    </div>
-                </div>
-            </div>
+    <h3>2023年</h3>
+    <div class="patent-item">
+        <div class="patent-title">
+            <a href="#">一种基于苗期新叶钾含量的油菜隐性缺钾诊断及施肥方法</a>
+        </div>
+        <div class="patent-info">
+            <span>发明人：任涛,谷贺贺,胡文诗,陆志峰,鲁剑巍,李小坤,廖世鹏,张洋洋,丛日环</span>
+            <span>授权日期：2023年</span>
+        </div>
+    </div>
+</div>
 
-            <div class="patent-year">
-                <h3>2021年</h3>
-                <div class="patent-item">
-                    <div class="patent-title">
-                        <a href="#">秸秆氮吸附测定装置</a>
-                    </div>
-                    <div class="patent-info">
-                        <span>发明人：鲁剑巍、张洋洋、廖世鹏等</span>
-                        <span>授权日期：2021年4月</span>
-                        <span>专利号：ZL202022085158.7</span>
-                    </div>
-                </div>
-            </div>
+<div class="patent-year">
+    <h3>2022年</h3>
+    <div class="patent-item">
+        <div class="patent-title">
+            <a href="#">一种雪茄茄衣烟叶的种植方法</a>
+        </div>
+        <div class="patent-info">
+            <span>发明人：杨春雷,饶雄飞,廖世鹏,李小坤,鲁剑巍,李宗平</span>
+            <span>授权日期：2022年</span>
+        </div>
+    </div>
+</div>
 
-            <!-- 其他年份专利条目 -->
+<div class="patent-year">
+    <h3>2021年</h3>
+    <div class="patent-item">
+        <div class="patent-title">
+            <a href="#">一种秸秆氮吸附测定装置</a>
+        </div>
+        <div class="patent-info">
+            <span>发明人：鲁剑巍,张洋洋,廖世鹏,李小坤,任涛,陆志峰</span>
+            <span>授权日期：2021年4月</span>
+            <span>专利号：ZL202022085158.7</span>
+        </div>
+    </div>
+</div>
+
+<div class="patent-year">
+    <h3>2020年</h3>
+    <div class="patent-item">
+        <div class="patent-title">
+            <a href="#">一种基于油-稻-稻三熟制的培肥及轻简化种植方法</a>
+        </div>
+        <div class="patent-info">
+            <span>发明人：李小坤,鲁剑巍,王森</span>
+            <span>授权日期：2020年</span>
+            <span>专利号：ZL201611068152.0</span>
+        </div>
+    </div>
+</div>
+
+<div class="patent-year">
+    <h3>2018年</h3>
+    <div class="patent-item">
+        <div class="patent-title">
+            <a href="#">一种便携式多功能植物叶片打孔器</a>
+        </div>
+        <div class="patent-info">
+            <span>发明人：侯文峰,李小坤,鲁剑巍,闫金垚,任涛</span>
+            <span>授权日期：2018年</span>
+        </div>
+    </div>
+</div>
+
+<div class="patent-year">
+    <h3>2017年</h3>
+    <div class="patent-item">
+        <div class="patent-title">
+            <a href="#">一种改善油菜根系生长提高菜籽产量的氮肥</a>
+        </div>
+        <div class="patent-info">
+            <span>发明人：任涛,鲁剑巍,张萌</span>
+            <span>授权日期：2017年</span>
+            <span>专利号：ZL201510347107.8</span>
+        </div>
+    </div>
+</div>
+
+<div class="patent-year">
+    <h3>2016年</h3>
+    <div class="patent-item">
+        <div class="patent-title">
+            <a href="#">一种适用于种植植物的根箱试验装置</a>
+        </div>
+        <div class="patent-info">
+            <span>发明人：李小坤,鲁剑巍,占丽平</span>
+            <span>授权日期：2016年</span>
+            <span>专利号：ZL201210055474.7</span>
+        </div>
+    </div>
+    <div class="patent-item">
+        <div class="patent-title">
+            <a href="#">一种水稻钾素营养的检测方法</a>
+        </div>
+        <div class="patent-info">
+            <span>发明人：李小坤,鲁剑巍,薛欣欣,任涛,丛日环,张洋洋</span>
+            <span>授权日期：2016年</span>
+        </div>
+    </div>
+</div>
+
+<div class="patent-year">
+    <h3>2015年</h3>
+    <div class="patent-item">
+        <div class="patent-title">
+            <a href="#">一种精确获取非根际距根际不同距离土壤的切土装置</a>
+        </div>
+        <div class="patent-info">
+            <span>发明人：占丽平,李小坤,鲁剑巍,任涛,王筝,何达力</span>
+            <span>授权日期：2015年</span>
+            <span>专利号：ZL201210055472.8</span>
+        </div>
+    </div>
+    <div class="patent-item">
+        <div class="patent-title">
+            <a href="#">油菜追肥肥料及油菜施肥方法</a>
+        </div>
+        <div class="patent-info">
+            <span>发明人：任涛,鲁剑巍,李小坤</span>
+            <span>授权日期：2015年</span>
+            <span>专利号：ZL201310162399.9</span>
+        </div>
+    </div>
+</div>
+
+<div class="patent-year">
+    <h3>2013年</h3>
+    <div class="patent-item">
+        <div class="patent-title">
+            <a href="#">Direct-seeding rape special-purpose formulated fertilizer</a>
+        </div>
+        <div class="patent-info">
+            <span>发明人：鲁剑巍,李小坤,任涛</span>
+            <span>授权日期：2013年</span>
+        </div>
+    </div>
+    <div class="patent-item">
+        <div class="patent-title">
+            <a href="#">一种再生稻专用配方肥</a>
+        </div>
+        <div class="patent-info">
+            <span>发明人：任涛,鲁剑巍,李小坤,丛日环,周鹂</span>
+            <span>授权日期：2013年</span>
+            <span>专利号：ZL201310365815.5</span>
+        </div>
+    </div>
+</div>
             
         </section>
     </main>
