--- a/chinese_papers.html
+++ b/chinese_papers.html
@@ -174,7 +174,114 @@
     </a>
     <p>张顺涛, 鲁剑巍, 丛日环, 等. 中国农业科学, 2020, 53(14): 2852-2858</p>
 </div>
-            
+              <h2>英文论文成果</h2>
+            <!-- 2025年 -->
+<div class="paper-item">
+    <a href="https://webofscience.clarivate.cn/wos/alldb/full-record/MEDLINE:40221269" target="_blank">
+        Nutrient limitations on photosynthesis: from individual to combinational stresses
+    </a>
+    <p>Lu, Z., Ren, T., Li, Y., Cakmak, I., & Lu, J.* Trends in Plant Science, 2025</p>
+</div>
+
+<div class="paper-item">
+    <a href="https://webofscience.clarivate.cn/wos/alldb/full-record/WOS:001432244300001" target="_blank">
+        Growth and survival strategies of oilseed rape leaves under potassium deficiency stress
+    </a>
+    <p>Gu, H., He, Z., Lu, Z., et al. The Plant Journal, 2025</p>
+</div>
+
+<div class="paper-item">
+    <a href="https://webofscience.clarivate.cn/wos/alldb/full-record/WOS:001417256100001" target="_blank">
+        Rice-crayfish farming increases soil organic carbon sequestration
+    </a>
+    <p>Zhang, W., Wu, J., Xu, M., et al. Agriculture, Ecosystems & Environment, 2025, 383, 109519</p>
+</div>
+
+<div class="paper-item">
+    <a href="https://webofscience.clarivate.cn/wos/alldb/full-record/CSCD:7894467" target="_blank">
+        Phosphorus fertilizer rates in rapeseed-rice rotation system
+    </a>
+    <p>Wang, C., Lu, Z., Yan, J., et al. Acta Agronomica Sinica, 2025, 51, 447-458</p>
+</div>
+
+<!-- 2024年 -->
+<div class="paper-item">
+    <a href="https://webofscience.clarivate.cn/wos/alldb/full-record/WOS:001333467300001" target="_blank">
+        Rice-crayfish farming alters soil dissolved organic carbon quality
+    </a>
+    <p>Zhang, W., Ma, T., Lu, J., et al. Journal of Environmental Management, 2024, 370, 122777</p>
+</div>
+
+<div class="paper-item">
+    <a href="https://webofscience.clarivate.cn/wos/alldb/full-record/WOS:001369462000001" target="_blank">
+        Tillage and straw returning promotes soil structure in rice-rape rotation
+    </a>
+    <p>Zhang, Y., Wang, K., Wang, J., et al. Soil Use and Management, 2024, 40, 13133</p>
+</div>
+
+<div class="paper-item">
+    <a href="https://webofscience.clarivate.cn/wos/alldb/full-record/WOS:001320625300001" target="_blank">
+        Optimal magnesium management for rapeseed yield and quality
+    </a>
+    <p>Geng, G., Ye, X., Ren, T., et al. European Journal of Agronomy, 2024, 161, 127364</p>
+</div>
+
+<div class="paper-item">
+    <a href="https://webofscience.clarivate.cn/wos/alldb/full-record/WOS:001261943300001" target="_blank">
+        Rice-crayfish system promotes microbial carbon accumulation
+    </a>
+    <p>Zhang, W., Song, Y., Ma, S., et al. Science of The Total Environment, 2024, 946, 174188</p>
+</div>
+
+<div class="paper-item">
+    <a href="https://webofscience.clarivate.cn/wos/alldb/full-record/BCI:BCI202400766841" target="_blank">
+        From hidden to visual K deficiency in plants
+    </a>
+    <p>Gu, H., Lu, Z., Ren, T., & Lu, J. Crop and Environment, 2024, 3, 84-90</p>
+</div>
+
+<!-- 2023年 -->
+<div class="paper-item">
+    <a href="https://webofscience.clarivate.cn/wos/alldb/full-record/MEDLINE:37820877" target="_blank">
+        Continuous potassium fertilization in rice-upland rotation systems
+    </a>
+    <p>Xiong, Z., Zhu, D., Lu, Y., et al. Chemosphere, 2023, 344, 140390</p>
+</div>
+
+<div class="paper-item">
+    <a href="https://webofscience.clarivate.cn/wos/alldb/full-record/WOS:001051955900001" target="_blank">
+        Potassium deficiency reduces Rubisco activity in Brassica napus
+    </a>
+    <p>Hu, W., Gu, H., Wang, K., et al. Plant Physiology and Biochemistry, 2023, 201, 107912</p>
+</div>
+
+<div class="paper-item">
+    <a href="https://webofscience.clarivate.cn/wos/alldb/full-record/WOS:001020425200001" target="_blank">
+        Soil phosphorus availability alters straw carbon effects
+    </a>
+    <p>Wang, K., Ren, T., Yan, J., et al. Plant and Soil, 2023, 491, 575-590</p>
+</div>
+
+<div class="paper-item">
+    <a href="https://doi.org/10.1016/j.eja.2023.126875" target="_blank">
+        Synergistic effect of nitrogen and potassium in winter oilseed rape
+    </a>
+    <p>Li, J., Zhou, Y., Gu, H., et al. European Journal of Agronomy, 2023, 148, 126875</p>
+</div>
+
+<div class="paper-item">
+    <a href="https://webofscience.clarivate.cn/wos/alldb/full-record/WOS:001037641600001" target="_blank">
+        Biochar return achieves high nitrogen use efficiency in rotations
+    </a>
+    <p>Zhang, S., Ren, T., Yang, X., et al. European Journal of Agronomy, 2023, 148, 126869</p>
+</div>
+
+<div class="paper-item">
+    <a href="https://webofscience.clarivate.cn/wos/alldb/full-record/WOS:000989983900001" target="_blank">
+        Meta-analysis on water use efficiency response to potassium
+    </a>
+    <p>Yang, C., Zhang, W., Gu, H., et al. Journal of Hydrology, 2023, 621, 129578</p>
+</div>
         </section>
     </main>
 </body>
