--- a/teachers.html
+++ b/teachers.html
@@ -28,6 +28,7 @@
                     <p><strong>职称：</strong>教授/博士生导师</p>
                     <p><strong>邮箱：</strong><a href="mailto:lujianwei@mail.hzau.edu.cn">lujianwei@mail.hzau.edu.cn</a></p>
                     <p><strong>研究方向：</strong>现代施肥技术、土壤肥力</p>
+                    <p><strong>资环学院官网</strong>[鲁剑巍](https://zyhj.hzau.edu.cn/info/1183/7556.htm)</p>
                     <div class="details">
                         <h4>学术兼职</h4>
                         <ul>
@@ -45,6 +46,7 @@
                     <p><strong>职称：</strong>教授/博士生导师</p>
                     <p><strong>邮箱：</strong><a href="mailto:lixiaokun@mail.hzau.edu.cn">lixiaokun@mail.hzau.edu.cn</a></p>
                     <p><strong>研究方向：</strong>水稻营养与施肥、稻田地力提升、水旱轮作体系养分管理、稻田综合种养体系养分管理、钾素营养与钾肥、作物专用肥的研发、现代施肥技术</p>
+                    <p><strong>资环学院官网</strong>[李小坤](https://faculty.hzau.edu.cn/lixiaokun/zh_CN/index.htm)</p>
                     <div class="details">
                         <h4>学术兼职</h4>
                         <ul>
@@ -60,6 +62,7 @@
     <p><strong>职称：</strong>教授/博士生导师</p>
     <p><strong>邮箱：</strong><a href="mailto:rentao@mail.hzau.edu.cn">rentao@mail.hzau.edu.cn</a></p>
     <p><strong>研究方向：</strong>作物营养生理与养分管理</p>
+    <p><strong>资环学院官网</strong>[任涛](https://zyhj.hzau.edu.cn/info/1183/7548.htm)</p>
     <div class="details">
         <h4>学术兼职</h4>
         <ul>
@@ -78,6 +81,7 @@
     <p><strong>职称：</strong>教授/博士生导师</p>
     <p><strong>邮箱：</strong><a href="mailto:ssliu@mail.hzau.edu.cn">ssliu@mail.hzau.edu.cn</a></p>
     <p><strong>研究方向：</strong>农业遥感</p>
+    <p><strong>资环学院官网</strong>[刘诗诗](https://zyhj.hzau.edu.cn/info/1183/7650.htm)</p>
     <div class="details">
         <h4>荣誉称号</h4>
         <ul>
@@ -92,6 +96,7 @@
     <p><strong>职称：</strong>副教授/硕士生导师</p>
     <p><strong>邮箱：</strong><a href="mailto:congrh@mail.hzau.edu.cn">congrh@mail.hzau.edu.cn</a></p>
     <p><strong>研究方向：</strong>作物养分管理与土壤肥力培育</p>
+    <p><strong>资环学院官网</strong>[丛日环](https://zyhj.hzau.edu.cn/info/1184/7580.htm)</p>
     <div class="details">
         <h4>学术兼职</h4>
         <ul>
@@ -109,6 +114,7 @@
     <p><strong>职称：</strong>副教授/硕士生导师</p>
     <p><strong>邮箱：</strong><a href="mailto:wenjunzhang@mail.hzau.edu.cn">wenjunzhang@mail.hzau.edu.cn</a></p>
     <p><strong>研究方向：</strong>土壤-植物养分循环与转化；土壤磷化学；植物硅营养</p>
+    <p><strong>资环学院官网</strong>[张文君](https://zyhj.hzau.edu.cn/info/1184/7581.htm)</p>
     <div class="details">
         <h4>荣誉称号</h4>
         <ul>
@@ -126,6 +132,7 @@
     <p><strong>职称：</strong>副教授/硕士生导师</p>
     <p><strong>邮箱：</strong><a href="mailto:zhifenglu@mail.hzau.edu.cn">zhifenglu@mail.hzau.edu.cn</a></p>
     <p><strong>研究方向：</strong>植物营养生理与作物养分管理</p>
+    <p><strong>资环学院官网</strong>[陆志峰](https://zyhj.hzau.edu.cn/info/1184/7567.htm)</p>
     <div class="details">
         <h4>获奖情况</h4>
         <ul>
