--- a/environment.html
+++ b/environment.html
@@ -25,7 +25,10 @@
                 <div class="lab-card">
                     <h3>主楼实验室</h3>
                     <p>203/205 基础实验，204 植物培养，207 土壤样品储藏</p>
-                    <div class="lab-image"><!-- 图片占位符 --></div>
+                    <div class="lab-image"><https://github.com/coraluo/63lab-hzau/blob/main/%E5%AE%9E%E9%AA%8C%E5%AE%A4%E7%8E%AF%E5%A2%83%E7%85%A7%E7%89%87/%E4%B8%BB%E6%A5%BC203.jpg></div>
+                    <div class="lab-image"><https://github.com/coraluo/63lab-hzau/blob/main/%E5%AE%9E%E9%AA%8C%E5%AE%A4%E7%8E%AF%E5%A2%83%E7%85%A7%E7%89%87/%E4%B8%BB%E6%A5%BC204.jpg></div>
+                    <div class="lab-image"><https://github.com/coraluo/63lab-hzau/blob/main/%E5%AE%9E%E9%AA%8C%E5%AE%A4%E7%8E%AF%E5%A2%83%E7%85%A7%E7%89%87/%E4%B8%BB%E6%A5%BC205.jpg></div>
+                    <div class="lab-image"><https://github.com/coraluo/63lab-hzau/blob/main/%E5%AE%9E%E9%AA%8C%E5%AE%A4%E7%8E%AF%E5%A2%83%E7%85%A7%E7%89%87/%E4%B8%BB%E6%A5%BC207.jpg></div>
                 </div>
                 <div class="lab-card">
                     <h3>资环楼实验室</h3>
