--- a/environment.html
+++ b/environment.html
@@ -33,12 +33,16 @@
                 <div class="lab-card">
                     <h3>资环楼实验室</h3>
                     <p>422 基础实验，426 元素分析，428 通风操作</p>
-                    <div class="lab-image"><!-- 图片占位符 --></div>
+                    <div class="lab-image"><https://github.com/coraluo/63lab-hzau/blob/main/%E5%AE%9E%E9%AA%8C%E5%AE%A4%E7%8E%AF%E5%A2%83%E7%85%A7%E7%89%87/%E8%B5%84%E7%8E%AF%E6%A5%BC422.jpg></div>
+                    <div class="lab-image"><https://github.com/coraluo/63lab-hzau/blob/main/%E5%AE%9E%E9%AA%8C%E5%AE%A4%E7%8E%AF%E5%A2%83%E7%85%A7%E7%89%87/%E8%B5%84%E7%8E%AF%E6%A5%BC426.jpg></div>
+                    <div class="lab-image"><https://github.com/coraluo/63lab-hzau/blob/main/%E5%AE%9E%E9%AA%8C%E5%AE%A4%E7%8E%AF%E5%A2%83%E7%85%A7%E7%89%87/%E8%B5%84%E7%8E%AF%E6%A5%BC428.jpg></div>
                 </div>
                 <div class="lab-card">
                     <h3>微肥楼实验室</h3>
                     <p>407 基础实验，403 样品烘干，401 消化实验</p>
-                    <div class="lab-image"><!-- 图片占位符 --></div>
+                    <div class="lab-image"><https://github.com/coraluo/63lab-hzau/blob/main/%E5%AE%9E%E9%AA%8C%E5%AE%A4%E7%8E%AF%E5%A2%83%E7%85%A7%E7%89%87/%E5%BE%AE%E8%82%A5%E6%A5%BC407.jpg></div>
+                    <div class="lab-image"><https://github.com/coraluo/63lab-hzau/blob/main/%E5%AE%9E%E9%AA%8C%E5%AE%A4%E7%8E%AF%E5%A2%83%E7%85%A7%E7%89%87/%E5%BE%AE%E8%82%A5%E6%A5%BC403.jpg></div>
+                    <div class="lab-image"><https://github.com/coraluo/63lab-hzau/blob/main/%E5%AE%9E%E9%AA%8C%E5%AE%A4%E7%8E%AF%E5%A2%83%E7%85%A7%E7%89%87/%E5%BE%AE%E8%82%A5%E6%A5%BC401.jpg></div>
                 </div>
             </div>
 
@@ -67,10 +71,12 @@
             <div class="base-grid">
                 <div class="base-card">
                     <h3>武穴市梅川基地</h3>
+                    <div class="lab-image"><https://github.com/coraluo/63lab-hzau/blob/main/%E5%AE%9E%E9%AA%8C%E5%AE%A4%E7%8E%AF%E5%A2%83%E7%85%A7%E7%89%87/%E5%BE%AE%E8%82%A5%E6%A5%BC407.jpg></div>
                     <p>主要开展大田作物栽培试验</p>
                 </div>
                 <div class="base-card">
                     <h3>沙洋油菜科技小院</h3>
+                    <div class="lab-image"><https://github.com/coraluo/63lab-hzau/blob/main/%E5%AE%9E%E9%AA%8C%E5%AE%A4%E7%8E%AF%E5%A2%83%E7%85%A7%E7%89%87/%E5%BE%AE%E8%82%A5%E6%A5%BC407.jpg></div>
                     <p>2023年获评"优秀科技小院"</p>
                 </div>
             </div>
