--- a/environment.html
+++ b/environment.html
@@ -71,13 +71,17 @@
             <div class="base-grid">
                 <div class="base-card">
                     <h3>武穴市梅川基地</h3>
-                    <div class="lab-image"><https://github.com/coraluo/63lab-hzau/blob/main/%E5%AE%9E%E9%AA%8C%E5%AE%A4%E7%8E%AF%E5%A2%83%E7%85%A7%E7%89%87/%E5%BE%AE%E8%82%A5%E6%A5%BC407.jpg></div>
+                    <div class="lab-image"><https://github.com/coraluo/63lab-hzau/blob/main/%E5%AE%9E%E9%AA%8C%E5%AE%A4%E7%8E%AF%E5%A2%83%E7%85%A7%E7%89%87/%E6%A2%85%E5%B7%9D%E5%9F%BA%E5%9C%B0.jpg></div>
                     <p>主要开展大田作物栽培试验</p>
                 </div>
                 <div class="base-card">
                     <h3>沙洋油菜科技小院</h3>
-                    <div class="lab-image"><https://github.com/coraluo/63lab-hzau/blob/main/%E5%AE%9E%E9%AA%8C%E5%AE%A4%E7%8E%AF%E5%A2%83%E7%85%A7%E7%89%87/%E5%BE%AE%E8%82%A5%E6%A5%BC407.jpg></div>
+                    <div class="lab-image"><https://github.com/coraluo/63lab-hzau/blob/main/%E5%AE%9E%E9%AA%8C%E5%AE%A4%E7%8E%AF%E5%A2%83%E7%85%A7%E7%89%87/%E6%B2%99%E6%B4%8B%E5%9F%BA%E5%9C%B0.jpg></div>
                     <p>2023年获评"优秀科技小院"</p>
+                </div>
+                 <div class="base-card">
+                    <h3>大法寺基地ge"><https://github.com/coraluo/63lab-hzau/blob/main/%E5%AE%9E%E9%AA%8C%E5%AE%A4%E7%8E%AF%E5%A2%83%E7%85%A7%E7%89%87/%E5%A4%A7%E6%B3%95%E5%AF%BA%E5%9F%BA%E5%9C%B0.jpg></div>
+                    <p>稻油轮作国家农业重大科技项目</p>
                 </div>
             </div>
         </section>
