--- a/environment.html
+++ b/environment.html
@@ -80,7 +80,7 @@
                     <p>2023年获评"优秀科技小院"</p>
                 </div>
                  <div class="base-card">
-                    <h3>大法寺基地></h3>
+                    <h3>大法寺基地</h3>
                     <div class="lab-image"><https://github.com/coraluo/63lab-hzau/blob/main/%E5%AE%9E%E9%AA%8C%E5%AE%A4%E7%8E%AF%E5%A2%83%E7%85%A7%E7%89%87/%E5%A4%A7%E6%B3%95%E5%AF%BA%E5%9F%BA%E5%9C%B0.jpg></div>
                     <p>稻油轮作国家农业重大科技项目</p>
                 </div>
