--- a/chinese_papers.html
+++ b/chinese_papers.html
@@ -282,6 +282,43 @@
     </a>
     <p>Yang, C., Zhang, W., Gu, H., et al. Journal of Hydrology, 2023, 621, 129578</p>
 </div>
+           <h2>国家专利</h2> 
+            <div class="paper-item">
+1.	一种基于苗期新叶钾含量的油菜隐性缺钾诊断及施肥方法 任涛,谷贺贺,胡文诗,陆志峰,鲁剑巍,李小坤,廖世鹏,张洋洋,丛日环 2023
+                </div>
+<div class="paper-item">
+2.	一种雪茄茄衣烟叶的种植方法 杨春雷，饶雄飞，廖世鹏，李小坤，鲁剑巍，李宗平 2022
+</div>
+<div class="paper-item">
+3.	一种秸秆氮吸附测定装置 鲁剑巍，张洋洋，廖世鹏，李小坤，任涛，陆志峰 2021
+</div>
+<div class="paper-item">
+4.	一种基于油 - 稻 - 稻三熟制的培肥及轻简化种植方法 李小坤，鲁剑巍，王森 2020
+</div>
+<div class="paper-item">
+5.	一种便携式多功能植物叶片打孔器 侯文峰，李小坤，鲁剑巍，闫金垚，任涛 2018
+</div>
+<div class="paper-item">
+6.	一种改善油菜根系生长提高菜籽产量的氮肥 任涛，鲁剑巍，张萌 2017
+</div>
+<div class="paper-item">
+7.	一种适用于种植植物的根箱试验装置 李小坤，鲁剑巍，占丽平 2016
+</div>
+<div class="paper-item">
+8.	一种水稻钾素营养的检测方法 李小坤，鲁剑巍，薛欣欣，任涛，丛日环，张洋洋 2016
+</div>
+<div class="paper-item">
+9.	一种精确获取非根际距根际不同距离土壤的切土装置 占丽平，李小坤，鲁剑巍，任涛，王筝，何达力 2015
+</div>
+<div class="paper-item">
+10.	Direct - seeding rape special - purpose formulated fertilizer 鲁剑巍，李小坤，任涛 2013
+</div>
+<div class="paper-item">
+11.	一种再生稻专用配方肥 任涛，鲁剑巍，李小坤，丛日环，周鹂 2013
+</div>
+
+
+            
         </section>
     </main>
 </body>
